# SFML-RPG

./: .gitignore  CMakeLists.txt  EditorState.cpp  EditorState.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  Player.cpp  Player.h  README.md  State.cpp  State.h  game.ini  keyboard.ini  main.cpp
Components/: AnimationComponent.cpp  AnimationComponent.h  HitboxComponent.cpp  HitboxComponent.h  Movement.cpp  Movement.h  MovementComponent.cpp  MovementComponent.h
States/: GameState.h  MainMenuState.cpp  MainMenuState.h  State.h
UI/: Button.cpp  Button.h
